[package]
name = "serde-yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashlink = "0.8.4"
serde = { version = "^1", features = ["derive"] }
yaml-rust2 = "0.8.1"


[dev-dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
# serde_json = "1.0.121"
